Fix CSS rule for nav spacing

--- a/sass/components/Header.scss
+++ b/sass/components/Header.scss
@@ -29,7 +29,7 @@
       }
 
       a + a {
-        margin-right: 12px;
+        margin-left: 12px;
       }
     }
   }
